--- a/kervi_ui/web/src/app/ui-components/cam-viewer/cam-viewer.component.scss
+++ b/kervi_ui/web/src/app/ui-components/cam-viewer/cam-viewer.component.scss
@@ -3,7 +3,7 @@
 	margin-top:-20px;
 }
 .cam-pad-area{
-	z-index: 1200;
+	//z-index: 1200; 
 	vertical-align: middle; 
 	width: 200px; 
 	display: inline-block; 
