--- a/kervi/ui/web/src/app/controllers/controller/controller.component.html
+++ b/kervi/ui/web/src/app/controllers/controller/controller.component.html
@@ -8,6 +8,16 @@
       </ng-container>
     </ng-container>
   </ng-container>
+  <ng-container  *ngFor="let component of controller.actions">
+    <ng-container *ngIf="component.visible">
+      <ng-container [ngSwitch]="component.type">
+        <ng-template ngSwitchCase="dynamic-number">
+          <dynamic-value [dashboardSection]="dashboardSection" [value]="component"></dynamic-value>
+          <kervi-action [dashboardSection]="dashboardSection" [action]="component" ></kervi-action>
+        </ng-template>
+      </ng-container>
+    </ng-container>
+  </ng-container>
 </ng-container>
 <ng-container *ngIf="controller.type=='camera'">
     <kervi-cam-viewer [isBackground]="false" [cameraId]="controller.id" [parameters]="parameters"></kervi-cam-viewer>
