Update to new KerviValue name

--- a/kervi/ui/web/src/app/values/dynamic-value/dynamic-value.component.html
+++ b/kervi/ui/web/src/app/values/dynamic-value/dynamic-value.component.html
@@ -1,27 +1,12 @@
 
 <ng-container [ngSwitch]="value.type">
-    <ng-template ngSwitchCase="dynamic-number">
+    <ng-template ngSwitchCase="number-value">
         <dynamic-value-number [defaultSizes]="defaultSizes" [parameters]="parameters" [dashboardSection]="dashboardSection" [inline]="inline" [input]="value"></dynamic-value-number>
     </ng-template>
-    <ng-template ngSwitchCase="dynamic-boolean">
+    <ng-template ngSwitchCase="boolean-value">
         <dynamic-value-boolean [defaultSizes]="defaultSizes" [parameters]="parameters" [dashboardSection]="dashboardSection" [inline]="inline" [value]="value"></dynamic-value-boolean>
     </ng-template>
-    <ng-template ngSwitchCase="dynamic-string">
+    <ng-template ngSwitchCase="string-value">
         <dynamic-value-string [defaultSizes]="defaultSizes" [parameters]="parameters" [dashboardSection]="dashboardSection" [inline]="inline" [input]="value"></dynamic-value-string>
     </ng-template>
-    <!--<template ngSwitchCase="dynamic-input">
-        <kervi-controller-text-input [dashboardSection]="dashboardSection" [input]="component"></kervi-controller-text-input>
-    </template>
-    <template ngSwitchCase="button">
-        <kervi-controller-button [dashboardSection]="dashboardSection" [button]="component"></kervi-controller-button>
-    </template>
-    <template ngSwitchCase="dynamic-boolean">
-        <kervi-controller-switchbutton [dashboardSection]="dashboardSection" [button]="component"></kervi-controller-switchbutton>
-    </template>
-    <template ngSwitchCase="dynamic-enum">
-        <kervi-controller-select [dashboardSection]="dashboardSection" [select]="component"></kervi-controller-select>
-    </template>
-    <template ngSwitchCase="dynamic-datetime">
-        <kervi-controller-datetime [dashboardSection]="dashboardSection" [datetime]="component"></kervi-controller-datetime>
-    </template>-->
 </ng-container>
