--- a/kervi/ui/web/src/app/controllers/controller/controller.component.html
+++ b/kervi/ui/web/src/app/controllers/controller/controller.component.html
@@ -2,7 +2,7 @@
   <ng-container  *ngFor="let component of controller.inputs">
     <ng-container *ngIf="component.visible">
       <ng-container [ngSwitch]="component.type">
-        <ng-template ngSwitchCase="dynamic-number">
+        <ng-template ngSwitchCase="number-value">
           <dynamic-value [dashboardSection]="dashboardSection" [value]="component"></dynamic-value>
         </ng-template>
       </ng-container>
@@ -11,7 +11,7 @@
   <ng-container  *ngFor="let component of controller.actions">
     <ng-container *ngIf="component.visible">
       <ng-container [ngSwitch]="component.type">
-        <ng-template ngSwitchCase="dynamic-number">
+        <ng-template ngSwitchCase="number-value">
           <kervi-action [dashboardSection]="dashboardSection" [action]="component" ></kervi-action>
         </ng-template>
       </ng-container>
