--- a/kervi/ui/web/src/app/values/number-value/number-value.component.html
+++ b/kervi/ui/web/src/app/values/number-value/number-value.component.html
@@ -7,7 +7,7 @@
             </div>
         </div>
         <div class="value-value" [style.min-width.rem]="parameters.valueSize">
-            {{(input.value$ | async)}}
+            {{(input.value$ | async | number:numberFormat)}}
         </div>
 	</div>
     <div class="value-section">
@@ -26,7 +26,7 @@
     <div style="display:inline-block" class="slider-inline"  [style.max-width.%]="parameters.inputSize">
         <ui-slider [defaultSizes]="defaultSizes" [value]="input" [parameters]="parameters"></ui-slider>
 	</div>
-    <span style="display:inline"  [style.max-width.%]="parameters.valueSize"    class="slider-value">{{(input.value$ | async)}}</span>
+    <span style="display:inline"  [style.max-width.%]="parameters.valueSize"    class="slider-value">{{(input.value$ | async | number:numberFormat)}}</span>
 </div>
 
 <span *ngIf="displayType=='value' && inline" class="input-inline input-type-value">
@@ -34,7 +34,7 @@
 		<ng-container *ngIf="parameters.label">{{parameters.label}}:</ng-container>
 		<i *ngIf="currentIcon" class="fa fa-{{currentIcon}}"></i>
 		<value-sparkline *ngIf="parameters.showSparkline" [value]="input"></value-sparkline>
-		<span style="display:inline-block" [style.min-width.rem]="parameters.valueSize" class="input-value">{{(input.value$ | async)}}{{input.unit}}</span>
+		<span style="display:inline-block" [style.min-width.rem]="parameters.valueSize" class="input-value">{{(input.value$ | async | number:numberFormat)}}{{input.unit}}</span>
 </span>
 
 <div *ngIf="displayType=='value' && !inline" class="block-component">
@@ -46,7 +46,7 @@
     <div style="display:inline-block; float: right">
         <i *ngIf="currentIcon" class="fa fa-{{currentIcon}}"></i>
         <value-sparkline *ngIf="parameters.showSparkline" [value]="input"></value-sparkline>
-        <span style="display: inline-block;text-align:right" [style.min-width.rem]="parameters.valueSize" class="input-value">{{(input.value$ | async)}}{{input.unit}}</span>
+        <span style="display: inline-block;text-align:right" [style.min-width.rem]="parameters.valueSize" class="input-value">{{(input.value$ | async | number:numberFormat)}}{{input.unit}}</span>
     </div>
 </div>
 
