--- a/kervi/ui/web/src/app/ui-components/cam-viewer/cam-viewer.component.html
+++ b/kervi/ui/web/src/app/ui-components/cam-viewer/cam-viewer.component.html
@@ -12,10 +12,15 @@
 			</fieldset>
 		</div>
 		<div style="position:absolute;top:30px;left:0px;width:100%;height:50px">
-				<ng-container  *ngFor="let component of actions">
-					<kervi-action *ngIf="component.visible" [dashboardSection]="dashboardSection" [action]="component" ></kervi-action>
-				</ng-container>
-			</div>
+			<ng-container  *ngFor="let component of actions">
+				<kervi-action *ngIf="component.visible" [dashboardSection]="dashboardSection" [action]="component" ></kervi-action>
+			</ng-container>
+			<a class="btn btn-primary " [style.width]="width" [style.height]="height" (mousedown)="imageViewer.show()" [attr.title]="browse">
+				<i  class='fa fa-folder'></i>
+				
+			</a>
+		</div>
+		
 	</div>
 	
 </ng-container>
@@ -35,4 +40,14 @@
 		</div>
 		
 	</div>
+	<div style="">
+		<ng-container  *ngFor="let component of actions">
+			<kervi-action *ngIf="component.visible" [dashboardSection]="dashboardSection" [action]="component" ></kervi-action>
+		</ng-container>
+		<a class="btn btn-primary " [style.width]="width" [style.height]="height" (mousedown)="imageViewer.show()" [attr.title]="browse">
+			<i  class='fa fa-folder'></i>
+			
+		</a>
+	</div>
 </ng-container>
+<kervi-image-viewer #imageViewer [camComponent]="this" [cameraSource]="(cameraSource$ | async)"></kervi-image-viewer>
