--- a/kervi/ui/web/src/app/values/number-value/number-value.component.html
+++ b/kervi/ui/web/src/app/values/number-value/number-value.component.html
@@ -14,7 +14,6 @@
         <div class="value-input" >
             <ui-slider [defaultSizes]="defaultSizes" [value]="input" [parameters]="parameters"></ui-slider>
         </div>
-        
     </div>
 </div>
 
@@ -34,7 +33,10 @@
 		<ng-container *ngIf="parameters.label">{{parameters.label}}:</ng-container>
 		<i *ngIf="currentIcon" class="fa fa-{{currentIcon}}"></i>
 		<value-sparkline *ngIf="parameters.showSparkline" [value]="input"></value-sparkline>
-		<span style="display:inline-block" [style.min-width.rem]="parameters.valueSize" class="input-value">{{(input.value$ | async | number:numberFormat)}}{{input.unit}}</span>
+		<span style="display:inline-block" [style.min-width.rem]="parameters.valueSize" class="input-value">
+            {{(input.value$ | async | number:numberFormat)}}
+            <span *ngIf="parameters.displayUnit">{{input.unit}}</span>
+        </span>
 </span>
 
 <div *ngIf="displayType=='value' && !inline" class="block-component">
@@ -46,7 +48,10 @@
     <div style="display:inline-block; float: right">
         <i *ngIf="currentIcon" class="fa fa-{{currentIcon}}"></i>
         <value-sparkline *ngIf="parameters.showSparkline" [value]="input"></value-sparkline>
-        <span style="display: inline-block;text-align:right" [style.min-width.rem]="parameters.valueSize" class="input-value">{{(input.value$ | async | number:numberFormat)}}{{input.unit}}</span>
+        <span style="display: inline-block;text-align:right" [style.min-width.rem]="parameters.valueSize" class="input-value">
+            {{(input.value$ | async | number:numberFormat)}}
+            <span *ngIf="parameters.displayUnit">{{input.unit}}</span>
+        </span>
     </div>
 </div>
 
