--- a/kervi/ui/web/src/styles/core/core.scss
+++ b/kervi/ui/web/src/styles/core/core.scss
@@ -2,6 +2,7 @@
 
 $fa-font-path: "~font-awesome/fonts";
 @import "../../../node_modules/font-awesome/scss/font-awesome.scss";
+@import "../../../node_modules/photoswipe/src/css/main.scss";
 
 
 html {
