--- a/kervi/ui/web/src/styles/core/core.scss
+++ b/kervi/ui/web/src/styles/core/core.scss
@@ -3,8 +3,7 @@
 $fa-font-path: "~font-awesome/fonts";
 @import "../../../node_modules/font-awesome/scss/font-awesome.scss";
 @import "../../../node_modules/photoswipe/src/css/main.scss";
-
-
+@import "../components/tempusdominus-bootstrap-4.scss";
 html {
   position: relative;
   min-height: 100%;
