--- a/kervi/ui/web/src/styles/styles.scss
+++ b/kervi/ui/web/src/styles/styles.scss
@@ -68,6 +68,10 @@ $slider-width: 20px !default;
 	color:#fff;
 }
 
+.input-group-text{
+	color:#fff !important;
+}
+
 .bootstrap-datetimepicker-widget{
 	color:#00FF00;
 	z-index:3000;
