--- a/kervi/ui/web/src/styles/themes/default/default.scss
+++ b/kervi/ui/web/src/styles/themes/default/default.scss
@@ -75,7 +75,7 @@ $sizes: (
 
 
 
-
+$input-group-addon-color:  #fff;
 $input-group-addon-bg:           #116611;// $gray-lighter !default;
 $input-group-addon-border-color: #116611;// !default;
 
