--- a/kervi/ui/web/src/app/ui-components/gauge/gauge.component.html
+++ b/kervi/ui/web/src/app/ui-components/gauge/gauge.component.html
@@ -1,3 +1,25 @@
-<div style="text-align:center">
-    <canvas id="{{canvasId}}" class="sensor-canvas" ></canvas>
-</div>
+<ngx-gauge class="gauge-width"
+    [value]="(value.value$ | async)" 
+    [min] = "value.minValue"
+    [max] = "value.maxValue"
+    [thresholds] = "dataHighlights"
+    [thick] = "12"
+    [cap] = "round"
+    [duration] = "1"
+    
+>
+<ngx-gauge-prepend>
+    <!-- custom prepend text or HTML goes here -->
+</ngx-gauge-prepend>
+<ngx-gauge-value>
+    {{value.value$ | async}}
+</ngx-gauge-value>
+<ngx-gauge-append>
+    
+</ngx-gauge-append>
+<ngx-gauge-label>
+    <div>{{value.unit}}</div>
+    <div>{{value.name}}</div>
+</ngx-gauge-label>
+
+</ngx-gauge>
