--- a/kervi/ui/web/src/app/ui-components/gauge/gauge.component.html
+++ b/kervi/ui/web/src/app/ui-components/gauge/gauge.component.html
@@ -13,12 +13,13 @@
 </ngx-gauge-prepend>
 <ngx-gauge-value>
     {{value.value$ | async}}
+    <div class="gauge-unit">{{value.unit}}</div>
 </ngx-gauge-value>
 <ngx-gauge-append>
     
 </ngx-gauge-append>
 <ngx-gauge-label>
-    <div>{{value.unit}}</div>
+    
     <div>{{value.name}}</div>
 </ngx-gauge-label>
 
