--- a/kervi/ui/web/src/styles/core/core.scss
+++ b/kervi/ui/web/src/styles/core/core.scss
@@ -1,9 +1,8 @@
 @import "../../../node_modules/bootstrap/scss/bootstrap.scss";
 
 $fa-font-path: "~font-awesome/fonts";
-@import "../../../node_modules/font-awesome/scss/font-awesome.scss";
 @import "../../../node_modules/photoswipe/src/css/main.scss";
-@import "../../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss";
+//@import "../../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss";
 @import "../components/tempusdominus-bootstrap-4.scss";
 
 html {
