--- a/kervi/ui/web/src/styles/styles.scss
+++ b/kervi/ui/web/src/styles/styles.scss
@@ -1,9 +1,8 @@
 @import "./themes/default/default.scss";
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
 
-$fa-font-path: "~font-awesome/fonts";
-@import "../../node_modules/font-awesome/scss/font-awesome.scss";
-
+//$fa-font-path: "../../node_modules/@fortawesome/fontawesome-free/webfonts";
+//@import "../../node_modules/@fontawesome/fontawesome-free/scss/fontawesome.scss";
 
 html {
   position: relative;
