--- a/kervi/ui/web/src/styles/themes/default/default.scss
+++ b/kervi/ui/web/src/styles/themes/default/default.scss
@@ -341,8 +341,13 @@ kervi-sensor:last-child .block-component{
 
 @media only screen {
     @import "./components/switch/toggle.scss";
-  @import "./components/slider/slider.scss";
- 
+    @import "./components/slider/slider.scss";
+    $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
+    @import "../../../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss";
+    @import "../../../../node_modules/@fortawesome/fontawesome-free/scss/fa-brands.scss";
+    @import "../../../../node_modules/@fortawesome/fontawesome-free/scss/fa-regular.scss";
+    @import "../../../../node_modules/@fortawesome/fontawesome-free/scss/fa-solid.scss";
+
  //   @import "./components/switch/candy";
   
 }
