Add support for color values

--- a/kervi/ui/web/src/app/values/dynamic-value/dynamic-value.component.html
+++ b/kervi/ui/web/src/app/values/dynamic-value/dynamic-value.component.html
@@ -14,4 +14,7 @@
     <ng-template ngSwitchCase="datetime-value">
         <dynamic-value-datetime [defaultSizes]="defaultSizes" [parameters]="parameters" [dashboardSection]="dashboardSection" [inline]="inline" [value]="value"></dynamic-value-datetime>
     </ng-template>
+    <ng-template ngSwitchCase="color-value">
+        <dynamic-value-color [defaultSizes]="defaultSizes" [parameters]="parameters" [dashboardSection]="dashboardSection" [inline]="inline" [value]="value"></dynamic-value-color>
+    </ng-template>
 </ng-container>
