Add empty app info

--- a/kervi/ui/web/src/app/dashboards/dashboard/dashboard.component.html
+++ b/kervi/ui/web/src/app/dashboards/dashboard/dashboard.component.html
@@ -31,7 +31,9 @@
 <ng-container *ngIf="dashboard && dashboard.template">
 	<!--<dashboard-layout [dashboard]="dashboard"></dashboard-layout>-->
 </ng-container>
+
 <div *ngIf="dashboard && !dashboard.template" style="position:relative;margin-top:35px;">
+	
 	<kervi-cam-viewer *ngIf="cameraId" [isBackground]="true" [cameraId]="cameraId" [parameters]="cameraParameters"></kervi-cam-viewer>
 	<div id="controller-pads">
 		<div *ngIf="showLeftPad" class="left-pad-area" style="position:fixed;" (mousedown)="padPress('left')" (mouseup)="padRelease('left')">
@@ -48,6 +50,16 @@
 		</div>
 	</div>
 	<div class="container-fluid" style="top:0;padding-top:10px;z-index:1999;position:absolute;padding-bottom:30px;" >
+		<ng-container *ngIf="componentsCount==0">
+			<div class="card-deck">
+				<div class="card-body"   style="position:relative;margin-top:35px;">
+					<h1>Hello world</h1>
+					<p>No dashboards, sensors, controllers or other components are found in this application!</p>
+			
+				</div>
+			</div>
+		</ng-container>
+		
 		<div  [ngClass]="{'dashboard-sections-hidden' : dashboardSectionsHidden }">
 			<kervi-dashboard-section  *ngFor="let section of dashboard.sections" [defaultSizes]="defaultSizes" [section]="section" class="w-{{section.width}}"></kervi-dashboard-section>
 		</div>  
