--- a/kervi/ui/web/src/app/dashboards/dashboard-section/dashboard-section.component.html
+++ b/kervi/ui/web/src/app/dashboards/dashboard-section/dashboard-section.component.html
@@ -55,9 +55,9 @@
             <thead>
             <tr>
                 <th>&nbsp;</th>
-                <th>Time</th>
-                <th>component</th>
-                <th style="width:100%">topic</th>
+                <th>{{( 'time' | translate)}}</th>
+                <th>{{( 'source' | translate)}}</th>
+                <th style="width:100%">{{( 'source' | translate)}}</th>
             </tr>
             </thead>
             <tbody>
