--- a/kervi/ui/web/src/app/login/login.component.html
+++ b/kervi/ui/web/src/app/login/login.component.html
@@ -10,7 +10,7 @@
       <label for="userNameInput">SKU</label>  
       <input type="text"  
              id="userNameInput"  
-             placeholder="User name"  
+             placeholder="User namex"  
              [formControl]="username">  
        <div *ngIf="!userName.valid"  
          class="ui error message">User name is invalid</div>  
