--- a/kervi/ui/web/src/app/dashboards/dashboard/dashboard.component.html
+++ b/kervi/ui/web/src/app/dashboards/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
 		<div class="col-xs-4 col-sm-4">
 			<ul class="navbar-nav flex-nowrap flex-row" >
 				<li class="nav-item dropdown">
-					<a *ngIf="showMenu" class="dropdown btn nav-link" title="Dashboards" style="padding-top:0;cursor: pointer" data-toggle="dropdown"><i class="fa fa-bars fa-lg" aria-hidden="true"></i></a>
+					<a *ngIf="showMenu" class="dropdown btn nav-link" title="{{( 'dashboards' | translate)}}" style="padding-top:0;cursor: pointer" data-toggle="dropdown"><i class="fa fa-bars fa-lg" aria-hidden="true"></i></a>
 					<div  class="dropdown-menu  multi-leve ul.nav.navbar-nav.no-collapse">
 						<!--<span class="dropdown-divider">&nbsp; Dashboards</span>-->
 						<div class="dropdown-submenu">
@@ -11,8 +11,8 @@
 							<a  *ngFor="let dashboard of (dashboards$ | async)" class="dropdown-item" [routerLink]="['/dashboard', dashboard.id]">{{dashboard.name}}</a>
 							</ng-container>
 							<div *ngIf="authenticated && dashboardCount > 1" class="dropdown-divider"></div>
-							<a *ngIf="authenticated && anonymous" href="javascript: return false;" (click)="logoff($event)" class="dropdown-item" >Log in</a>
-							<a *ngIf="authenticated && !anonymous" href="javascript: return false;" (click)="logoff($event)" class="dropdown-item" >Log out</a>
+							<a *ngIf="authenticated && anonymous" href="javascript: return false;" (click)="logoff($event)" class="dropdown-item" >{{('login' | translate)}}</a>
+							<a *ngIf="authenticated && !anonymous" href="javascript: return false;" (click)="logoff($event)" class="dropdown-item" >{{('logout' | translate)}}</a>
 						</div>
 					</div>
 				</li>
@@ -53,8 +53,8 @@
 		<ng-container *ngIf="componentsCount==0">
 			<div class="card-deck">
 				<div class="card-body"   style="position:relative;margin-top:35px;">
-					<h1>Hello world</h1>
-					<p>No dashboards, sensors, controllers or other components are found in this application!</p>
+					<h1>{{( 'hello_world' | translate)}}</h1>
+					<p>{{( 'empty_app' | translate)}}</p>
 			
 				</div>
 			</div>
@@ -75,7 +75,7 @@
 		</div>
 		<div class="col-sm-4 text-right" style="text-align: right">
 			<kervi-dashboard-section [inline]="true" *ngIf="dashboard.footerRightSection" [defaultSizes]="defaultSizes" [section]="dashboard.footerRightSection"></kervi-dashboard-section>
-			<i class="fa fa-expand" title="Toggle full screen" (mousedown)="toggleFullScreen()"></i>&nbsp;
+			<i class="fa fa-expand" title="{{( 'toggle_screen' | translate)}}" (mousedown)="toggleFullScreen()"></i>&nbsp;
 		</div>
 	</div>
 </footer>
